<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.lijinhong11</groupId>
        <artifactId>protectorapi</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>protectorapi-plugin</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>ProtectorAPI-Plugin-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
        </dependency>

        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-api</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-worldguard</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-dominion</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-huskclaims</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-iridiumskyblock</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-redprotect</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-residence</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-bentobox</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-plotsquared</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-blocklocker</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-towny</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-chestprotection</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-bolt</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-chestshop</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-factionsuuid</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-funnyguilds</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-lwcx</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-lands</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-quickshop</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-shopchest</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-lockettepro</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-griefprevention</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-husktowns</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-nobuildplus</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.lijinhong11</groupId>
            <artifactId>protectorapi-block-excellentclaims</artifactId>
            <version>${revision}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>